--- a/public/html/detect.html
+++ b/public/html/detect.html
@@ -3,17 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Обнаружение</title>
+    <title>Диагностика</title>
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/drag-n-drop.css" />
     <script src="../js/components/header.js" type="text/javascript" defer></script>
     <script src="../js/components/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
     <header-component></header-component>
 
-    <main>Detect page</main>
+    <main>
+        <h1>Диагностика</h1>
+        <section class="flexcol-container flex-centered">
+            <p>
+                Загрузите файл с панорамным рентгеновским снимком для начала диагностики в форму ниже.
+            </p>
+            <div id="drop-area">
+                <form id="detect-form">
+                    <p>Перетащите или нажмите чтобы загрузить файл</p>
+                    <input type="file" id="detect-input-file" accept="image/*" onchange="handleDrop">
+                    <label class="button" for="detect-input-file">Выбрать файл</label>
+                </form>
+                <div id="gallery"></div>
+            </div>
+        </section>
+    </main>
 
     <footer-component></footer-component>
 </body>
+<script src="../js/drag-n-drop.js"></script>
 </html>
