--- a/public/html/login.html
+++ b/public/html/login.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="flexcol-container login-container">
                     <label>Пароль</label>
-                    <input type="text" required>
+                    <input type="password" required>
                 </div>
                 <div class="flexcol-container login-container">
                     <button id="login-button">Войти</button>
