--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -19,22 +19,22 @@
         <section id="profile-info">
             <h4>Иван Иванов</h4>
             <form onchange="addButtons()">
-                <div class="profile-input-contianer">
+                <div class="profile-input-container">
                     <label>Пол</label>
                     <select name="sex" required>
                         <option value="m" selected>Мужской</option>
                         <option value="f">Женский</option>
                     </select>
                 </div>
-                <div class="profile-input-contianer">
+                <div class="profile-input-container">
                     <label>Email</label>
                     <input type="email" required value="ivanov@email.abc">
                 </div>
-                <div class="profile-input-contianer">
+                <div class="profile-input-container">
                     <label>Телефон</label>
                     <input type="tel" required value="+7-888-888-88-88">
                 </div>
-                <div class="profile-input-contianer" id="buttons-wrapper">
+                <div class="profile-input-container" id="buttons-wrapper">
                     <button type="submit">Сохранить</button>
                     <button>Отменить</button>
                 </div>
@@ -75,6 +75,15 @@
                     </tbody>
                 </table>
             </div>
+        </section>
+        <section>
+            <h5>Отправить приглашение в систему</h5>
+            <form>
+                <div class="invite-container">
+                    <input id="invite-input" type="email" placeholder="example@mail.com" required>
+                    <button id="invite-btn" type="submit">Пригласить</button>
+                </div>
+            </form>
         </section>
     </main>
 
