--- a/public/html/detect.html
+++ b/public/html/detect.html
@@ -20,9 +20,9 @@
                 Загрузите файл с панорамным рентгеновским снимком для начала диагностики в форму ниже.
             </p>
             <div id="drop-area">
-                <form id="detect-form">
+                <form id="detect-form" enctype="multipart/form-data">
                     <p>Перетащите или нажмите чтобы загрузить файл</p>
-                    <input type="file" id="detect-input-file" accept="image/*" onchange="handleDrop">
+                    <input type="file" id="detect-input-file" name="detect-image" accept="image/*" onchange="handleDrop">
                     <label class="button" for="detect-input-file">Выбрать файл</label>
                 </form>
                 <div id="gallery"></div>
