--- a/public/html/login.html
+++ b/public/html/login.html
@@ -14,17 +14,17 @@
 
     <main>
         <section id="login">
-            <form class="flexcol-container flex-centered login-form-container" method="get" action="/profile">
+            <form class="flexcol-container flex-centered login-form-container">
                 <div class="flexcol-container login-container">
                     <label>Логин</label>
-                    <input type="text" required>
+                    <input type="text" required name="login" autocomplete="username">
                 </div>
                 <div class="flexcol-container login-container">
                     <label>Пароль</label>
-                    <input type="password" required>
+                    <input type="password" required name="password" autocomplete="current-password">
                 </div>
                 <div class="flexcol-container login-container">
-                    <button id="login-button">Войти</button>
+                    <button id="login-button" type="submit">Войти</button>
                 </div>
             </form>
         </section>
@@ -32,4 +32,10 @@
 
     <footer-component></footer-component>
 </body>
+<script src="../js/login-service.js"></script>
+<script>
+    const service = new LoginService();
+    const loginForm = document.querySelector("form");
+    loginForm.addEventListener("submit", service.login.bind(service, loginForm));
+</script>
 </html>
