Add backend interaction (#4)
* ✨ Add 2 more pages

* 💄 Add logos

* 💄 Make header sticky

* ✨ Upgrade footer

* ✨ Add empty slider

* 💄 Add some styles

* ✨ Add login page

* ✨ Add slider pictures

* ✨ Add another section

* ✨ Add sending form

* ✨ Add drag-and-drop

* 💄 Add loader

* ✨ Add login page

* 💄 Add grid layout

* ✨ Add articles

* 💄 Fix adaptiveness

* ✨ Add profile page

* 💄 Improve profile and about responsiveness

* 🎨 Fix indents

* ✨ Final fixes

* Add README

* ✨ Add backend interaction

* ✨ Add login service

* ✨ Add auth

* ✨ Add articles fetching

---------

Co-authored-by: Petr <pazaderey@edu.hse.ru>

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -14,17 +14,18 @@
 
     <main>
         <section id="login">
-            <form class="flexcol-container flex-centered login-form-container" method="get" action="/profile">
+            <form class="flexcol-container flex-centered login-form-container">
                 <div class="flexcol-container login-container">
                     <label>Логин</label>
-                    <input type="text" required>
+                    <input type="text" required name="login" autocomplete="username">
                 </div>
                 <div class="flexcol-container login-container">
                     <label>Пароль</label>
-                    <input type="password" required>
+                    <input type="password" required name="password" autocomplete="current-password">
                 </div>
+                <h4 id="wrong-password" hidden>Неправильный пароль</h4>
                 <div class="flexcol-container login-container">
-                    <button id="login-button">Войти</button>
+                    <button id="login-button" type="submit">Войти</button>
                 </div>
             </form>
         </section>
@@ -32,4 +33,16 @@
 
     <footer-component></footer-component>
 </body>
+<script src="../js/login-service.js"></script>
+<script>
+    const userLogin = window.sessionStorage.getItem("userId");
+    if(userLogin !== null) {
+        window.location.href = "/profile";
+    } else {
+        const service = new LoginService();
+        const loginForm = document.querySelector("form");
+        loginForm.addEventListener("submit", service.login.bind(service));
+        loginForm.addEventListener("change", service.hideWrongPassword.bind(service));
+    }
+</script>
 </html>
