✨ Add dockerfile and fix article fields

--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -28,11 +28,11 @@
                 </div>
                 <div class="profile-input-container">
                     <label>Email</label>
-                    <input type="email" name="email" required>
+                    <input type="email" name="email">
                 </div>
                 <div class="profile-input-container">
                     <label>Телефон</label>
-                    <input type="tel" required name="phone">
+                    <input type="tel" name="phone">
                 </div>
                 <div class="profile-input-container" id="buttons-wrapper">
                     <button type="submit">Сохранить</button>
